--- a/views/editPlant.ejs
+++ b/views/editPlant.ejs
@@ -12,6 +12,18 @@
             <textarea class="form-control" id="plantingInstructions" name="plantingInstructions" rows="3" required><%= plant.plantingInstructions %></textarea>
         </div>
         <div class="form-group">
+            <label for="overview">Overview:</label>
+            <textarea class="form-control" id="overview" name="overview" rows="3" required><%= plant.overview %></textarea>
+        </div>
+        <div class="form-group">
+            <label for="benefits">Benefits:</label>
+            <textarea class="form-control" id="benefits" name="benefits" rows="3" required><%= plant.benefits %></textarea>
+        </div>
+        <div class="form-group">
+            <label for="usedFor">Used For:</label>
+            <textarea class="form-control" id="usedFor" name="usedFor" rows="3" required><%= plant.usedFor %></textarea>
+        </div>      
+        <div class="form-group">
             <label for="harvestTime">Estimated Harvest Time:</label>
             <input type="number" class="form-control" id="harvestTime" name="harvestTime" value="<%= plant.harvestTime %>" required>
         </div>
@@ -21,13 +33,14 @@
                 <% const months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']; %>
                 <% months.forEach(function(month) { %>
                     <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="plantingMonth" value="<%= month %>" 
+                        <input class="form-check-input" type="checkbox" name="plantingMonth[]" value="<%= month %>" 
                         <%= plant.plantingMonth.includes(month) ? 'checked' : '' %>>
                         <label class="form-check-label"><%= month %></label>
                     </div>
                 <% }); %>
             </div>
         </div>
+       
         <div class="form-group">
             <label for="plantImage">Upload Plant Image (optional):</label>
             <input type="file" class="form-control-file" id="plantImage" name="plantImage" accept="image/*">
